# Practica-1

./: CMakeLists.txt  README.md  main.cpp
Headers/: F1Team.h  FrontJack.h  FrontWingAdjust.h  LollipopMan.h  PitCrewTeam.h  RearJack.h  SideJack.h  TeamDriverA.h  TeamDriverB.h  TyreGunner.h  TyreOff.h  TyreOn.h  Utilities.h
Sources/: F1Team.cpp  FrontJack.cpp  FrontWingAdjust.cpp  LollipopMan.cpp  PitCrewTeam.cpp  RearJack.cpp  SideJack.cpp  TeamDriverA.cpp  TeamDriverB.cpp  TyreGunner.cpp  TyreOff.cpp  TyreOn.cpp  Utilities.cpp
